samples/_failures_safe/1761167380_44f7e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b89bb4a5.c: In function ‘print_stats’:
./samples/SAFE/__tmp_b89bb4a5.c:126:12: error: missing terminating " character
  126 |     printf("Warnings: %
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_b89bb4a5.c:126:5: error: expected expression at end of input
  126 |     printf("Warnings: %
      |     ^~~~~~
./samples/SAFE/__tmp_b89bb4a5.c:126:5: error: expected declaration or statement at end of input
